--- a/SDG.SpookyWisconsin.PL/SDG.SpookyWisconsin.PL.csproj
+++ b/SDG.SpookyWisconsin.PL/SDG.SpookyWisconsin.PL.csproj
@@ -1,13 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SDG.SpookyWisconsin.BL.Models\SDG.SpookyWisconsin.BL.Models.csproj" />
+    <ProjectReference Include="..\SDG.SpookyWisconsin.DB\SDG.SpookyWisconsin.DB.sqlproj" />
   </ItemGroup>
 
 </Project>
