--- a/SDG.SpookyWisconsin.BL/SDG.SpookyWisconsin.BL.csproj
+++ b/SDG.SpookyWisconsin.BL/SDG.SpookyWisconsin.BL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SDG.SpookyWisconsin.BL.Models\SDG.SpookyWisconsin.BL.Models.csproj" />
     <ProjectReference Include="..\SDG.SpookyWisconsin.PL\SDG.SpookyWisconsin.PL.csproj" />
   </ItemGroup>
