--- a/SDG.SpookyWisconsin.WebUI.Test/SDG.SpookyWisconsin.WebUI.Test.csproj
+++ b/SDG.SpookyWisconsin.WebUI.Test/SDG.SpookyWisconsin.WebUI.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,11 +14,6 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SDG.SpookyWisconsin.API\SDG.SpookyWisconsin.API.csproj" />
-    <ProjectReference Include="..\SDG.SpookyWisconsin.BL.Models\SDG.SpookyWisconsin.BL.Models.csproj" />
   </ItemGroup>
 
 </Project>
