--- a/SDG.SpookyWisconsin.PL/SDG.SpookyWisconsin.PL.csproj
+++ b/SDG.SpookyWisconsin.PL/SDG.SpookyWisconsin.PL.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SDG.SpookyWisconsin.BL.Models\SDG.SpookyWisconsin.BL.Models.csproj" />
+    <ProjectReference Include="..\SDG.SpookyWisconsin.DB\SDG.SpookyWisconsin.DB.sqlproj" />
   </ItemGroup>
 
 </Project>
