--- a/SDG.SpookyWisconsin.WebUI.Test/SDG.SpookyWisconsin.WebUI.Test.csproj
+++ b/SDG.SpookyWisconsin.WebUI.Test/SDG.SpookyWisconsin.WebUI.Test.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SDG.SpookyWisconsin.WebUI\SDG.SpookyWisconsin.WebUI.csproj" />
+  </ItemGroup>
+
 </Project>
