Added Controllers for Haunted Events and Locations

--- a/SDG.SpookyWisconsin.WebUI/SDG.SpookyWisconsin.WebUI.csproj
+++ b/SDG.SpookyWisconsin.WebUI/SDG.SpookyWisconsin.WebUI.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\SDG.SpookyWisconsin.BL\SDG.SpookyWisconsin.BL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\HauntedEvents\" />
+    <Folder Include="Views\HauntedLocations\" />
+  </ItemGroup>
+
 </Project>
