--- a/SDG.SpookyWisconsin.WebUI/SDG.SpookyWisconsin.WebUI.csproj
+++ b/SDG.SpookyWisconsin.WebUI/SDG.SpookyWisconsin.WebUI.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\SDG.SpookyWisconsin.BL\SDG.SpookyWisconsin.BL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
